--- a/style.css
+++ b/style.css
@@ -81,7 +81,7 @@ nav ul li{
     display: flex;
     background-color: white;
     color: black;
-    width: 85%;
+    /* width: 85%; */
     margin: 12px 0;
     justify-content: space-between;
     border-radius: 15px;
